--- a/jpaclass/pom.xml
+++ b/jpaclass/pom.xml
@@ -13,13 +13,18 @@
 	    <groupId>org.hibernate</groupId>
 	    <artifactId>hibernate-core</artifactId>
 	    <version>6.6.9.Final</version>
-	    <type>pom</type>
 	</dependency>
+	<dependency>
+	    <groupId>org.hibernate</groupId>
+	    <artifactId>hibernate-jpamodelgen</artifactId>
+	    <version>6.6.9.Final</version>
+	</dependency>
+	
 	<dependency>
 	    <groupId>com.mysql</groupId>
 	    <artifactId>mysql-connector-j</artifactId>
 	    <version>9.2.0</version>
-	</dependency>	 
+	</dependency>		 
   </dependencies>
   <build>
     <sourceDirectory>src</sourceDirectory>
